syntax = "proto3";
package tunnelservice;

option go_package = "pb/tunnel";

message SetTunnelRequest {
  string name = 1;
}

message Tunnel {
  string name = 1;
  string port = 2;
  string createdAt = 3;
  string domain = 4;
  string status = 5;
}

message GetTunnelResponse {
  repeated Tunnel message = 1;
  int32 status = 2;
}

message SetTunnelResponse {
  Tunnel message = 1;
  int32 status = 2;
}
message DeleteTunnelResponse {
  string message = 1;
  int32 status = 2;
}
message Empty {}
  
  // TunnelService proto tunnel service
  service NginxTunnelService {
    rpc GetTunnels(Empty) returns (GetTunnelResponse) {}
    rpc SetTunnel(SetTunnelRequest) returns (SetTunnelResponse) {}
    rpc DeleteTunnel(SetTunnelRequest) returns(DeleteTunnelResponse){}
    rpc GetByName(SetTunnelRequest) returns (SetTunnelResponse) {}
    //
    rpc GetCaddyTunnels(Empty) returns (GetTunnelResponse) {}
    rpc SetCaddyTunnel(SetTunnelRequest) returns (SetTunnelResponse) {}
    rpc DeleteCaddyTunnel(SetTunnelRequest) returns(DeleteTunnelResponse){}
    rpc GetCaddyByName(SetTunnelRequest) returns (SetTunnelResponse) {}
  }

